# government-project-analysis-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  NOTICE  PROJECT_NOTES.md  README.USER.md  README.md  alembic.ini  bootstrap_sources.sh  compose.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run_admin.sh  run_compose.sh  sources.yaml  sources.yaml.template
alembic/: env.py  script.py.mako
alembic/versions/: 20260422_1010_a8f3c2d14e7b_baseline_initial_schema.py  20260422_1500_b2c5e8f1a934_phase1a_new_tables.py  20260424_0900_c4a8d1e7b2f3_favorites_announcement_unit_cascade.py  20260428_1700_d3f9a2b6c814_delta_snapshot_tables.py  20260504_0135_e5b8f2a9c471_user_email_subscribed_organizations.py  20260507_0730_f6c9a3b8d572_relevance_organization_id.py  20260508_0500_a9c1b2d3e4f5_remove_personal_relevance_judgments.py  20260508_0700_c2d3e4f5a6b7_backup_system_tables.py  20260508_0900_b8d7e2c45f01_announcement_progress_tables.py  20260513_0915_e7f8b9a3c456_email_send_runs.py  20260514_0930_f8a2b3c4d5e6_email_forward_logs.py  20260519_1500_d4e7c8a9b021_email_daily_report_runs.py  20260522_0100_b3d9e1f7c264_scheduler_job_claims.py  20260526_0300_c5a8d1e7b9f4_scheduler_jobs_json_columns.py  20260526_0800_d6b2e8c1a9f7_scrape_snapshot_per_run.py  20260605_0300_e1a2b3c4d5f6_backfill_general_schedules_from_legacy.py  20260605_0400_b7c8d9e0f1a2_drop_legacy_scheduler_jobs.py  20260605_0500_c9d0e1f2a3b4_create_scheduled_jobs_ssot.py
app/: __init__.py  canonical.py  cli.py  config.py  logging_setup.py  timezone.py
app/auth/: __init__.py  constants.py  dependencies.py  routes.py  service.py
app/backup/: __init__.py  constants.py  service.py
app/db/: __init__.py  init_db.py  migration.py  models.py  repository.py  session.py  snapshot.py
app/email/: __init__.py  config.py  constants.py  daily_report.py  forwarding.py  gate.py  message_builder.py  sender.py
app/notices/: __init__.py  models.py  repository.py
app/organizations/: __init__.py  io.py  service.py
app/progress/: __init__.py  repository.py
app/rendering/: __init__.py  announcement_row.py
app/scheduler/: __init__.py  constants.py  cron.py  crontab_generator.py  crontab_installer.py  job_guard.py  job_runner.py  jobstore.py  legacy_backfill.py  run_job.py  schedule_store.py  scheduled_job_migration.py  scheduled_job_store.py  service.py  single_instance.py
app/scraper/: base.py  (+7 more)
docker/: Dockerfile  entrypoint.sh
docs/: 00035-6-verification.md  00039-3-verification.md  00040-verification.md  00041-verification.md  alembic_migration_design.md  alembic_verification.md  attachment_download_plan.md  auth_ui_design.md  canonical_grouping_audit_00036.md  canonical_identity_design.md  dashboard_design.md  db_portability.md  duplicate_detection_analysis.md  email_transport_options.md  favorites_ui_design.md  ntis_collection_notes.md  ntis_site_exploration.md  phase_a1_design_note.md  phase_a2_part1_design_note.md  phase_a2_part2_design_note.md  phase_a3_design_note.md  progress_org_design.md  relevance_org_design.md  relevance_ui_design.md  schema_phase1a.md  scrape_control_design.md  snapshot_pipeline_design.md  status_transition_todo.md  task_00151_pr_body.md  timezone_audit.md
scripts/: audit_canonical_false_positives.py  backfill_canonical.py  backfill_kst_assumption.py  backup_db.py  bootstrap_sources.sh  compose.sh  create_admin.py  gc_orphan_attachments.py  migrate_boards_db.py  verify_canonical_cross_source.py  verify_canonical_iris.py
tests/: __init__.py  conftest.py  test_canonical.py  test_canonical_cross_source_fallback.py  test_cli_datetime_parse.py  test_timezone.py
(+227 files in other folders)
