[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "government-project-analysis-agent"
version = "0.1.0"
description = "IRIS 등 정부과제 공고를 스크래핑 · 저장 · 열람하는 로컬 에이전트"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [
    { name = "SeungKeol Kim" },
]

# 런타임 의존성.
# 실제 설치는 pip / Docker 빌드 단계에서 수행하며, 이 파일은 선언 전용이다.
dependencies = [
    # 스크래핑 (HTTP 기반 목록 수집)
    "httpx>=0.27,<1.0",

    # 데이터 모델 / DB
    "SQLAlchemy>=2.0,<3.0",

    # 웹 서버 (로컬 열람용)
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "jinja2>=3.1,<4.0",

    # 설정/검증
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",

    # 로깅
    "loguru>=0.7,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "data*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
