[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "government-project-analysis-agent"
version = "0.1.0"
description = "IRIS, NTIS 등 정부과제 사업공고를 스크래핑 · 저장 · 열람하는 로컬 에이전트"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [
    { name = "SeungKeol Kim" },
]

# 런타임 의존성.
# 실제 설치는 pip / Docker 빌드 단계에서 수행하며, 이 파일은 선언 전용이다.
dependencies = [
    # 스크래핑 (HTTP 기반 목록·상세 수집)
    "httpx>=0.27,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    # headless 브라우저 기반 첨부파일 다운로드 (Playwright headless chromium)
    "playwright>=1.44,<2.0",

    # 데이터 모델 / DB
    "SQLAlchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",

    # 웹 서버 (로컬 열람용)
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "jinja2>=3.1,<4.0",
    # FastAPI Form/File 파싱 (multipart/form-data) — app/auth/routes.py 의 로그인/회원가입에서 사용
    "python-multipart>=0.0.9,<1.0",

    # 설정/검증
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",

    # 로깅
    "loguru>=0.7,<1.0",

    # 인증 (Phase 1b — bcrypt 해시)
    # passlib 가 해시 포맷과 라운드 파라미터를 포함해 저장하므로, 라운드 값이
    # 바뀌어도 기존 해시를 그대로 verify 할 수 있다. bcrypt 4.x 는 passlib
    # 1.7.4 와 호환되지만 일부 환경에서 __about__ 경고가 뜨므로 bcrypt 를
    # 명시적으로 함께 고정한다.
    "passlib[bcrypt]>=1.7,<2.0",
    "bcrypt>=4.0,<5.0",

    # 스케줄러 (Phase 2 / 00025 — 웹 프로세스 내부 APScheduler BackgroundScheduler)
    # docs/scrape_control_design.md §13 참조. SQLAlchemyJobStore 로 scheduler_jobs
    # 테이블에 job 을 영속화해 웹 재시작 시 스케줄을 복원한다.
    # **주의**: APScheduler 4.x 는 API 가 대대적으로 바뀌어(async-first, data store
    # 추상화 개편) 3.x 코드와 호환되지 않는다. 본 task 는 3.x 라인에 고정한다.
    # (실제 import 는 00025-6 스케줄 탭 통합 시점까지 지연 — 선언만 먼저 넣어 둬도
    # 기동에 영향을 주지 않는다.)
    "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "data*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
